--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,56 +37,56 @@ jobs:
 
       - name: Create ECS task definition
         run: |
-          cat > task-definition.json <<EOF
-          {
-            "family": "graph-rag-task",
-            "networkMode": "awsvpc",
-            "requiresCompatibilities": ["FARGATE"],
-            "cpu": "256",
-            "memory": "512",
-            "executionRoleArn": "arn:aws:iam::223516915321:role/graph-rag-ecs-task-execution",
-            "taskRoleArn": "arn:aws:iam::223516915321:role/graph-rag-ecs-task-execution",
-            "containerDefinitions": [
-              {
-                "name": "app-container",
-                "image": "${{ secrets.DOCKER_USERNAME }}/graphrag-hackathon:${{ github.sha }}",
-                "essential": true,
-                "portMappings": [
-                  {
-                    "containerPort": 8080,
-                    "protocol": "tcp"
-                  }
-                ],
-                "environment": [
-                  {
-                    "name": "OPENAI_API_KEY",
-                    "value": "${{ secrets.OPENAI_API_KEY }}"
-                  },
-                  {
-                    "name": "NEO4J_URI",
-                    "value": "${{ secrets.NEO4J_URI }}"
-                  },
-                  {
-                    "name": "NEO4J_USERNAME",
-                    "value": "${{ secrets.NEO4J_USERNAME }}"
-                  },
-                  {
-                    "name": "NEO4J_PASSWORD",
-                    "value": "${{ secrets.NEO4J_PASSWORD }}"
-                  }
-                ],
-                "logConfiguration": {
-                  "logDriver": "awslogs",
-                  "options": {
-                    "awslogs-group": "/ecs/graph-rag",
-                    "awslogs-region": "eu-central-1",
-                    "awslogs-stream-prefix": "ecs"
-                  }
-                }
-              }
-            ]
-          }
-          EOF
+          cat > task-definition.json <<'EOF'
+{
+  "family": "graph-rag-task",
+  "networkMode": "awsvpc",
+  "requiresCompatibilities": ["FARGATE"],
+  "cpu": "256",
+  "memory": "512",
+  "executionRoleArn": "arn:aws:iam::223516915321:role/graph-rag-ecs-task-execution",
+  "taskRoleArn": "arn:aws:iam::223516915321:role/graph-rag-ecs-task-execution",
+  "containerDefinitions": [
+    {
+      "name": "app-container",
+      "image": "${{ secrets.DOCKER_USERNAME }}/graphrag-hackathon:${{ github.sha }}",
+      "essential": true,
+      "portMappings": [
+        {
+          "containerPort": 8080,
+          "protocol": "tcp"
+        }
+      ],
+      "environment": [
+        {
+          "name": "OPENAI_API_KEY",
+          "value": "${{ secrets.OPENAI_API_KEY }}"
+        },
+        {
+          "name": "NEO4J_URI",
+          "value": "${{ secrets.NEO4J_URI }}"
+        },
+        {
+          "name": "NEO4J_USERNAME",
+          "value": "${{ secrets.NEO4J_USERNAME }}"
+        },
+        {
+          "name": "NEO4J_PASSWORD",
+          "value": "${{ secrets.NEO4J_PASSWORD }}"
+        }
+      ],
+      "logConfiguration": {
+        "logDriver": "awslogs",
+        "options": {
+          "awslogs-group": "/ecs/graph-rag",
+          "awslogs-region": "eu-central-1",
+          "awslogs-stream-prefix": "ecs"
+        }
+      }
+    }
+  ]
+}
+EOF
 
       - name: Register ECS task definition
         id: task-def
