--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,7 +37,7 @@ jobs:
 
       - name: Create ECS task definition
         run: |
-          cat > task-definition.json <<'EOF'
+          cat > task-definition.json <<EOF
 {
   "family": "graph-rag-task",
   "networkMode": "awsvpc",
